[package]
name = "wittgenlang"
version = "0.1.0"
authors = ["Mack Hasz <lazy@var.email>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "wittgenlang"

[[bin]]
name = "wittgenlang-cli"
path = "src/main.rs"

[features]
default = ["console_error_panic_hook"]
wasm = ["wasm-bindgen", "web-sys", "js-sys", "console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.84", optional = true }
thiserror = "1.0"
logos = "0.13"
web-sys = { version = "0.3", features = ["console"], optional = true }
js-sys = { version = "0.3", optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
